Reformatted all files to have 80 character limit. There was change of setting that needed to be done to handle it.