@@ -15,20 +15,29 @@ import java.util.stream.IntStream;
  */
 public class TestData {
 
-    private Player firstPresident = Player.newPlayer("playerLiberal1", Role.LIBERAL);
+    private Player firstPresident = Player.newPlayer("playerLiberal1", Role
+            .LIBERAL);
 
     public List<Policy> getInitialPolicies() {
         final ImmutableList.Builder<Policy> policies = ImmutableList.builder();
-        policies.addAll(IntStream.range(0, 11).mapToObj(i -> Policy.FASCIST).collect(Collectors.toList()));
-        policies.addAll(IntStream.range(0, 6).mapToObj(i -> Policy.LIBERAL).collect(Collectors.toList()));
+        policies.addAll(IntStream.range(0, 11).mapToObj(i -> Policy.FASCIST)
+                .collect(Collectors.toList()));
+        policies.addAll(IntStream.range(0, 6).mapToObj(i -> Policy.LIBERAL)
+                .collect(Collectors.toList()));
         return policies.build();
     }
 
     public List<Player> getInitialPlayers() {
         final ImmutableList.Builder<Player> players = ImmutableList.builder();
-        players.addAll(IntStream.range(0, 3).mapToObj(i -> Player.newPlayer("playerLiberal" + i, Role.LIBERAL)).collect(Collectors.toList()));
-        players.addAll(IntStream.range(0, 1).mapToObj(i -> Player.newPlayer("playerFascist" + i, Role.FASCIST)).collect(Collectors.toList()));
-        players.addAll(IntStream.range(0, 1).mapToObj(i -> Player.newPlayer("playerHitler" + i, Role.HITLER)).collect(Collectors.toList()));
+        players.addAll(IntStream.range(0, 3).mapToObj(i -> Player.newPlayer
+                ("playerLiberal" + i, Role.LIBERAL)).collect(Collectors
+                .toList()));
+        players.addAll(IntStream.range(0, 1).mapToObj(i -> Player.newPlayer
+                ("playerFascist" + i, Role.FASCIST)).collect(Collectors
+                .toList()));
+        players.addAll(IntStream.range(0, 1).mapToObj(i -> Player.newPlayer
+                ("playerHitler" + i, Role.HITLER)).collect(Collectors.toList
+                ()));
         return players.build();
     }
 
